include/sonare/sonare_c_engine.h

/// @brief Clears all live MIDI CC to parameter bindings.
SonareError sonare_engine_clear_midi_cc_bindings(SonareRealtimeEngine* engine);
/// @brief Returns the number of live MIDI CC bindings.
SonareError sonare_engine_midi_cc_binding_count(SonareRealtimeEngine* engine, size_t* out_count);
/// @brief Clears the live MIDI-FX insert on one destination.
SonareError sonare_engine_clear_midi_fx(SonareRealtimeEngine* engine, uint32_t destination_id);
/// @brief Enables the engine-owned live MIDI input source for a destination.
/// @details Hosts can push timestamped input events with
///          `sonare_engine_push_midi_input_*`; the engine drains them at block
///          start through the same `set_midi_input_source` path used by native
///          C++ hosts. `destination_id` selects the realtime MIDI destination.
SonareError sonare_engine_set_midi_input_source(SonareRealtimeEngine* engine,
                                                uint32_t destination_id);
/// @brief Clears the engine-owned live MIDI input source.
SonareError sonare_engine_clear_midi_input_source(SonareRealtimeEngine* engine);
/// @brief Number of queued events in the engine-owned live MIDI input source.
SonareError sonare_engine_midi_input_pending_count(SonareRealtimeEngine* engine, size_t* out_count);
SonareError sonare_engine_push_midi_input_note_on(SonareRealtimeEngine* engine, uint8_t group,
                                                  uint8_t channel, uint8_t note, uint8_t velocity,
                                                  int64_t port_time_samples);
SonareError sonare_engine_push_midi_input_note_off(SonareRealtimeEngine* engine, uint8_t group,
                                                   uint8_t channel, uint8_t note, uint8_t velocity,
                                                   int64_t port_time_samples);
SonareError sonare_engine_push_midi_input_cc(SonareRealtimeEngine* engine, uint8_t group,
                                             uint8_t channel, uint8_t controller, uint8_t value,
                                             int64_t port_time_samples);
/// @brief Queues an immediate live MIDI note-on to a MIDI destination.
SonareError sonare_engine_push_midi_note_on(SonareRealtimeEngine* engine, uint32_t destination_id,
                                            uint8_t group, uint8_t channel, uint8_t note,
                                            uint8_t velocity, int64_t render_frame);
/// @brief Queues an immediate live MIDI note-off to a MIDI destination.
SonareError sonare_engine_push_midi_note_off(SonareRealtimeEngine* engine, uint32_t destination_id,
                                             uint8_t group, uint8_t channel, uint8_t note,
                                             uint8_t velocity, int64_t render_frame);
/// @brief Reads the current engine transport state (playing/position/ppq/tempo).
SonareError sonare_engine_get_transport_state(SonareRealtimeEngine* engine,
                                              SonareTransportState* out);