include/sonare/sonare_c_effects.h

/// @brief Peak-normalize mono audio. @p target_db must be finite and <= 0 dBFS;
/// positive targets are rejected rather than hard-clipped.
SonareError sonare_normalize(const float* samples, size_t length, int sample_rate, float target_db,
                             float** out, size_t* out_length);
SonareError sonare_trim(const float* samples, size_t length, int sample_rate, float threshold_db,
                        float** out, size_t* out_length);