bindings/python/src/libsonare/_ffi_signatures_effects_engine.py

        lib.sonare_engine_clear_midi_cc_bindings.argtypes = [ctypes.c_void_p]
    if hasattr(lib, "sonare_engine_midi_cc_binding_count"):
        lib.sonare_engine_midi_cc_binding_count.restype = ctypes.c_int32
        lib.sonare_engine_midi_cc_binding_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_size_t),
        ]
    if hasattr(lib, "sonare_engine_clear_midi_fx"):
        lib.sonare_engine_clear_midi_fx.restype = ctypes.c_int32
        lib.sonare_engine_clear_midi_fx.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
        ]
    if hasattr(lib, "sonare_engine_set_midi_input_source"):
        lib.sonare_engine_set_midi_input_source.restype = ctypes.c_int32
        lib.sonare_engine_set_midi_input_source.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
        ]
    if hasattr(lib, "sonare_engine_clear_midi_input_source"):
        lib.sonare_engine_clear_midi_input_source.restype = ctypes.c_int32
        lib.sonare_engine_clear_midi_input_source.argtypes = [ctypes.c_void_p]
    if hasattr(lib, "sonare_engine_midi_input_pending_count"):
        lib.sonare_engine_midi_input_pending_count.restype = ctypes.c_int32
        lib.sonare_engine_midi_input_pending_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_size_t),
        ]
    for _name in (
        "sonare_engine_push_midi_input_note_on",
        "sonare_engine_push_midi_input_note_off",
        "sonare_engine_push_midi_input_cc",
    ):
        if hasattr(lib, _name):
            _fn = getattr(lib, _name)
            _fn.restype = ctypes.c_int32
            _fn.argtypes = [
                ctypes.c_void_p,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_int64,
            ]
    for _name in (
        "sonare_engine_push_midi_note_on",
        "sonare_engine_push_midi_note_off",
    ):
        if hasattr(lib, _name):
            _fn = getattr(lib, _name)
            _fn.restype = ctypes.c_int32
            _fn.argtypes = [
                ctypes.c_void_p,
                ctypes.c_uint32,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_uint8,
                ctypes.c_int64,
            ]
    if hasattr(lib, "sonare_engine_get_transport_state"):
        lib.sonare_engine_get_transport_state.restype = ctypes.c_int32
        lib.sonare_engine_get_transport_state.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareTransportState),
        ]

    # sonare_normalize
    lib.sonare_normalize.restype = ctypes.c_int32
    lib.sonare_normalize.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_trim
    lib.sonare_trim.restype = ctypes.c_int32
    lib.sonare_trim.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
